<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".Activities.BikeDetails">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/icon_bike" />

            <TextView
                android:id="@+id/tvBikeNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/bike_no"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/model"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/address"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/distance"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvRent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/rent_hrs"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvTotalRent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/total_rent"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvDateOfBooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/booked_on"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvBookedFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/from"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvBookedTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/to"
                android:textSize="20sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direction" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>