<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".Fragments.UserInputs">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8.5">

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/city"
                android:clickable="false"
                android:focusable="false"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/cityBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            app:srcCompat="@android:drawable/ic_menu_mylocation" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8.5">

            <EditText
                android:id="@+id/etStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/start_date"

                android:clickable="false"
                android:focusable="false"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/startDateBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8.5">

            <EditText
                android:id="@+id/etEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"

                android:clickable="false"
                android:focusable="false"
                android:hint="@string/end_date"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/endDateBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />
    </LinearLayout>

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    </LinearLayout>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        style="AVLoadingIndicatorView.Large"
        app:indicatorColor="@color/colorAccent"
        app:indicatorName="BallClipRotateMultipleIndicator"
        />

</RelativeLayout>
